# finetune-slm

./: README.md  pyproject.toml  run_pipeline.sh
benchmarks/: baseline_metrics.json  comparative_report.txt  comparison_table.csv  finetuned_metrics.json  training_summary.json
data/processed/: data_stats.json
scripts/: 0_data_prep.py  1_baseline_benchmark.py  2_finetune.py  3_evaluate_finetuned.py  4_comparative_analysis.py
